Check that a copy of each shard can be allocated to the chosen node